--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17353,7 +17353,7 @@ readers do not read off random characters that represent icons */
 }
 
 * {
-  font-family: "Mukta", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 body {
