--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -1,7 +1,8 @@
 [v-cloak] { display:none !important; }
 *{
     //font-family: arial;
-    font-family: 'Mukta', sans-serif;
+    //font-family: 'Mukta', sans-serif;
+    font-family: 'Raleway', sans-serif;
     //font-size: 1rem;
 }
 body{
