--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17101,6 +17101,15 @@ readers do not read off random characters that represent icons */
   [1] Base Styles
 -------------------------------------------------*/
 
+button {
+  border-radius: 50%;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  color: rgb(10, 184, 159);
+}
+
 [aria-label][role~=tooltip] {
   position: relative;
 }
@@ -17126,16 +17135,18 @@ readers do not read off random characters that represent icons */
 }
 
 [aria-label][role~=tooltip]::after {
-  background: rgba(17, 17, 17, 0.9);
+  background: rgba(10, 184, 159, 0.9);
   border-radius: 4px;
   color: #ffffff;
   content: attr(aria-label);
   font-size: var(--microtip-font-size, 13px);
   font-weight: var(--microtip-font-weight, normal);
   text-transform: var(--microtip-text-transform, none);
+  background-color: rgba(10, 184, 159, 0.9);
   padding: 0.5em 1em;
   white-space: nowrap;
   box-sizing: content-box;
+  line-height: 1.1;
 }
 
 [aria-label][role~=tooltip]:hover::before,
@@ -17151,10 +17162,15 @@ readers do not read off random characters that represent icons */
 -------------------------------------------------*/
 
 [role~=tooltip][data-microtip-position|=top]::before {
-  background: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2236px%22%20height%3D%2212px%22%3E%3Cpath%20fill%3D%22rgba%2817,%2017,%2017,%200.9%29%22%20transform%3D%22rotate%280%29%22%20d%3D%22M2.658,0.000%20C-13.615,0.000%2050.938,0.000%2034.662,0.000%20C28.662,0.000%2023.035,12.002%2018.660,12.002%20C14.285,12.002%208.594,0.000%202.658,0.000%20Z%22/%3E%3C/svg%3E") no-repeat;
+  /* background: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2236px%22%20height%3D%2212px%22%3E%3Cpath%20fill%3D%22rgba%2817,%2017,%2017,%200.9%29%22%20transform%3D%22rotate%280%29%22%20d%3D%22M2.658,0.000%20C-13.615,0.000%2050.938,0.000%2034.662,0.000%20C28.662,0.000%2023.035,12.002%2018.660,12.002%20C14.285,12.002%208.594,0.000%202.658,0.000%20Z%22/%3E%3C/svg%3E") no-repeat;
   height: 6px;
   width: 18px;
-  margin-bottom: 5px;
+  margin-bottom: 5px;*/
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 12px solid rgba(10, 184, 159, 0.9);
 }
 
 [role~=tooltip][data-microtip-position|=top]::after {
@@ -17348,6 +17364,11 @@ readers do not read off random characters that represent icons */
   width: 260px;
 }
 
+[role~=tooltip][data-microtip-size=extra-large]::after {
+  white-space: initial;
+  width: 300px;
+}
+
 [v-cloak] {
   display: none !important;
 }
@@ -17533,7 +17554,8 @@ ul > p {
   height: 70px;
 }
 
-.page-list a {
+.page-list a,
+.page-list button {
   width: 100%;
   height: 100%;
   display: flex;
@@ -17543,13 +17565,15 @@ ul > p {
   transition: 0.3s;
 }
 
-.page-list a:hover {
+.page-list a:hover,
+.page-list button:hover {
   text-decoration: none;
   background-color: gray;
   color: white;
 }
 
-.page-list a span {
+.page-list a span,
+.page-list button span {
   display: inline-block;
   width: 60%;
 }
