--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -192,7 +192,7 @@ ul>p{
   height: 100%;
   border: 3px solid gray;
   height: 70px;
-    a{
+    a,button{
         width: 100%;
         height: 100%;
         display: flex;
