--- a/resources/sass/admin/accounts/index.scss
+++ b/resources/sass/admin/accounts/index.scss
@@ -9,7 +9,7 @@
     // }
     .search{
         width: 100%;
-        min-height: 840px;
+        //min-height: 840px;
         padding: 15px;
         h1{
             text-align: center;
@@ -57,14 +57,14 @@
                 background-color: white;
                 padding: 10px;
                 position: relative;
-                &:first-child{
-                    border-top-left-radius: 20px;
-                    border-top-right-radius: 20px;
-                }
-                &:last-child{
-                    border-bottom-left-radius: 20px;
-                    border-bottom-right-radius: 20px;
-                }
+                // &:first-child{
+                //     border-top-left-radius: 20px;
+                //     border-top-right-radius: 20px;
+                // }
+                // &:last-child{
+                //     border-bottom-left-radius: 20px;
+                //     border-bottom-right-radius: 20px;
+                // }
                 .placeholder-info{
                     position: absolute;
                     right: 0px;
@@ -93,7 +93,7 @@
                 button{
                     width: 100%;
                     height: 50px;
-                    border-radius: 20px;
+                    //border-radius: 20px;
                 }
                 .tag-search{
                     position: relative;
