--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -18,6 +18,14 @@ $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
 
+$green_3: #17B8A1;
+$green_2: #80DACD;
+$green_1: #E5F7F5;
+
+$blue_3: #2AACE7;
+$blue_2: #8AD1F1;
+$blue_1: #E7F6FC;
+
 // $default_green: rgb(19,155,72);
 $default_green: #0AB89F;
 // $default_green_deactivate: rgba(19,155,72,0.7);
