--- a/resources/sass/admin/chats/index.scss
+++ b/resources/sass/admin/chats/index.scss
@@ -1,13 +1,12 @@
 #chat-index{
-    height: calc(100vh - 215px);
+    //height: calc(100vh - 215px);
     .chat-cont{
         //min-height: 93%;
-        height: calc(100% - 50px);
+        //height: calc(100% - 50px);
         background-color: $hover_gray;
         border-radius: 20px;
         margin-top: 10px;
         padding: 15px;
-        overflow-y: auto;
         .chat-item{
             display: block;
             display: flex;
