--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -8,7 +8,8 @@
 body{
     //background-image: url("../images/preview-background.jpg") !important;
     //background-color: #111;
-    background-color: #f3f5f9;
+    //background-color: #f3f5f9;
+    background-color: white;
     overflow-wrap: break-word;
     box-sizing: border-box;
     width: 100%;
@@ -339,7 +340,11 @@ ul>p{
     border-radius: 50%;
     background-color: white;
     border: 2px solid $default_green;
+    position: relative;
     img{
+        position: absolute;
+        top: 0px;
+        left: 0px;
         width: 100%;
         height: 100%;
         object-fit: contain;
@@ -355,6 +360,10 @@ ul>p{
     height: 50px;
 }
 .medium-img{
+    width: 100px;
+    height: 100px;
+}
+.big-img{
     width: 150px;
     height: 150px;
 }
@@ -394,20 +403,31 @@ ul>p{
 
 //BUTTON
 
-.button-active-multichoise{
-  background-color: $default_green !important;
+
+
+.multichoise-b{
+    border: none;
+    font-weight: bold;
+}
+
+.multichoise-green{
+    color: $green_3;
+    background-color: $green_1;
+}
+
+.multichoise-green.active{
+  background-color: $green_2 !important;
   color: white !important;
 }
 
-.button-color-multichoise{
-    border: 2px solid $default_green;
-    color: $default_green;
-    background-color: white;
-    &:hover{
-        transition: 0.2s;
-        background-color: $default_green;
-        color: white;
-    }
+.multichoise-blue{
+    color: $blue_3;
+    background-color: $blue_1;
+}
+
+.multichoise-blue.active{
+    background-color: $blue_2 !important;
+    color: white !important;
 }
 
 .button-active-sector{
@@ -419,11 +439,6 @@ ul>p{
     border: 2px solid $orange;
     color: $orange;
     background-color: white;
-    &:hover{
-        transition: 0.2s;
-        background-color: $orange;
-        color: white;
-    }
 }
 
 .button-color{
@@ -444,7 +459,7 @@ ul>p{
     &:hover{
         transition: 0.2s;
         color: $blue;
-        background-color: white;
+        background-color: transparent;
     }
 }
 
@@ -455,7 +470,7 @@ ul>p{
     &:hover{
         transition: 0.2s;
         color: $red;
-        background-color: white;
+        background-color: transparent;
     }
 }
 
@@ -466,7 +481,7 @@ ul>p{
     &:hover{
         transition: 0.2s;
         color: $orange;
-        background-color: white;
+        background-color: transparent;
     }
 }
 
@@ -502,7 +517,7 @@ ul>p{
 .border-style{
   display: inline-block;
   padding: 3px 10px 2px 10px;
-  border-radius: 0.15rem;
+  border-radius: 0.20rem;
   color: gray;
   border: 2px solid gray;
   margin-right: 3px;
@@ -513,7 +528,7 @@ ul>p{
     display: inline-block;
     padding: 5px 10px 4px 10px;
     // border-radius: 5px;
-    border-radius: 0.1875rem;
+    border-radius: 10px;
     transition: 0.2s;
     &:hover{
         text-decoration: none;
@@ -843,14 +858,15 @@ ul>p{
 
 .item-cont{
     padding-top: 20px;
+    .item-style-visible{
+        box-shadow: 0px 0px 10px 1px #ccc;
+        padding: 30px;
+        background-color: white;
+    }
     .item-style{
         width: 100%;
         height: 100%;
-        // border: 2px solid gray;
-        box-shadow: 0px 0px 10px 1px #ccc;
-        // border-radius: 10px;
-        padding: 30px;
-        background-color: white;
+
         color: black;
         position: relative;
         .edit-top-right{
@@ -885,6 +901,53 @@ ul>p{
         }
     }
 }
+
+.tool-tip-b{
+    position: relative;
+    .tool-tip{
+        transition: 0.2s;
+        display: inline-block;
+        width: 350px;
+        opacity: 0;
+        z-index: 10;
+        background-color: $default_green;
+        color: white;
+        padding: 5px;
+        position: absolute;
+        top: 35px;
+        left: 50%;
+        transform: translate(-50%,0);
+        max-height: 300px;
+        font-size: 12px;
+        font-weight: bold;
+        box-shadow: 0px 0px 20px 0px rgba(255,255,255,0.5);
+        pointer-events: none;
+    }
+    &:hover{
+        .tool-tip{
+            opacity: 1;
+        }
+    }
+}
+
+.custom-scrollbar{
+    overflow-y: auto;
+    &::-webkit-scrollbar{//scroll
+        width: 12px;
+        background-color: #F5F5F5;
+    }
+    &::-webkit-scrollbar-track{//binario
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        //border-radius: 10px;
+        background-color: $default_green_deactivate;
+    }
+    &::-webkit-scrollbar-thumb{//cursore
+        border-radius: 10px;
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+        background-color:  $default_green_deactivate;
+    }
+}
+
 
 .tag-search{
     position: relative;
@@ -1316,6 +1379,69 @@ ul>p{
     .carousel-inner{
 
     }
+}
+
+.main-multi-slider{
+    position: relative;
+    .multi-slider-cont{
+        width: auto;
+        height: 300px;
+        overflow-x:scroll;
+        overflow-y:hidden;
+        white-space:nowrap;
+        -webkit-overflow-scrolling: touch;
+        &::-webkit-scrollbar{
+            display: none;
+        }
+        .multi-slider-item{
+            height: 100%;
+            display: inline-block;
+            //background-color: lightblue;
+        }
+    }
+    .slider-left,.slider-right{
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        height: 100%;
+        width: 25px;
+        border: none;
+        font-size: 20px;
+    }
+    .slider-left{
+        left: 0px;
+        background: rgba(255,255,255,.7);
+        // background: rgb(255,255,255);
+        // background: linear-gradient(90deg, rgba(255,255,255,.8), rgba(255,255,255,.25), rgba(255,255,255,0));
+    }
+    .slider-right{
+        right: 0px;
+        background: rgba(255,255,255,.7);
+        // background: rgb(255,255,255);
+        // background: linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,.25), rgba(255,255,255,.8));
+    }
+}
+
+.card-style{
+    padding: 10px;
+    border-radius: 5px;
+    font-weight: bold;
+    width: 180px;
+    height: 215px;
+    white-space: normal;
+    p{
+        height: 22px;
+    }
+}
+
+.card-color-green{
+    background-color: lightgreen;
+    color: green;
+}
+
+.card-color-blue{
+    background-color: lightblue;
+    color: blue;
 }
 
 @media (min-width: 992px){
