--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18765,7 +18765,7 @@ ul > p {
 
 .card-color-blue {
   background-color: lightblue;
-  color: blue;
+  color: #2AACE7;
 }
 
 @media (min-width: 992px) {
