--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -1441,7 +1441,7 @@ ul>p{
 
 .card-color-blue{
     background-color: lightblue;
-    color: blue;
+    color: $blue_3;
 }
 
 @media (min-width: 992px){
