--- a/resources/sass/admin/accounts/index.scss
+++ b/resources/sass/admin/accounts/index.scss
@@ -1,15 +1,24 @@
 #search{
     .background{
+        margin-top: -75px;
+        padding-top: 75px;
         background-color: white;
-        background-image: url('../../../../public/storage/images/jumbotron1.jpg');
-        background-size: cover;
+        background-image: url('../../../../public/storage/images/jumbotron.svg');
+        background-size:  cover;
+        height: 870px;
+    }
+    .end-background{
+      margin-top: -100px;
+      height: 200px;
+      background: rgb(255,255,255);
+      background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(234,244,255,.9) 75%, rgba(234,244,255,0) 100%);
     }
     // .col-md-12{
     //     padding: 0;
     // }
     .search{
         width: 100%;
-        //min-height: 840px;
+        min-height: 600px;
         padding: 15px;
         h1{
             text-align: center;
