--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -18,13 +18,15 @@ $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
 
-$green_3: #17B8A1;
+//CARD
+$green_3: #01B59C;
 $green_2: #80DACD;
 $green_1: #E5F7F5;
 
-$blue_3: #2AACE7;
+$blue_3: #00A1DC;
 $blue_2: #8AD1F1;
-$blue_1: #E7F6FC;
+$blue_1: #E5F5FC;
+// 009FE3
 
 // $default_green: rgb(19,155,72);
 $default_green: #0AB89F;
