--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -28,6 +28,8 @@ $blue_2: #8AD1F1;
 $blue_1: #E5F5FC;
 // 009FE3
 
+$light_gray: #F3F5F9;
+
 // $default_green: rgb(19,155,72);
 $default_green: #0AB89F;
 // $default_green_deactivate: rgba(19,155,72,0.7);
