--- a/resources/sass/admin/accounts/show.scss
+++ b/resources/sass/admin/accounts/show.scss
@@ -7,6 +7,8 @@
         padding: 30px;
     }
     .profile{
+        background-color: $green_1;
+        padding: 40px;
         .profile-image{
             a{
                 top:20px;
