--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -28,6 +28,8 @@ $blue_2: #8AD1F1;
 $blue_1: #E5F5FC;
 // 009FE3
 
+$gray_1: #CDD8D6;
+
 $light_gray: #F3F5F9;
 
 // $default_green: rgb(19,155,72);
