--- a/resources/sass/admin/chats/show.scss
+++ b/resources/sass/admin/chats/show.scss
@@ -1,7 +1,7 @@
 #chat-show,.chat-show{
-    height: calc(100vh - 215px);
+    height: calc(100vh - 315px);
     .messages-cont{
-        background-color: lightblue;
+        background-color: $green_1;
         height: calc(100% - 100px);
         border-radius: 20px;
         margin-top: 10px;
@@ -10,10 +10,11 @@
         .message-item{
             padding-bottom: 5px;
             text-align: left;
+            color: white;
             span{
                 max-width: 80%;
                 display: inline-block;
-                background-color: white;
+                background-color: $blue_3;
                 border-radius: 10px;
                 border-radius: 10px 10px 10px 0px;
                 padding: 2px 7px;
@@ -28,7 +29,7 @@
         .my-message-item{
             text-align: right;
             span{
-                background-color: $default_green;
+                background-color: $green_3;
                 border-radius: 10px 10px 0px 10px;
                 small{
                     text-align: right;
