--- a/resources/sass/admin/chats/index.scss
+++ b/resources/sass/admin/chats/index.scss
@@ -45,6 +45,10 @@
                     color: white;
                 }
             }
+            .active{
+                background-color: $blue_2;
+                color: white;
+            }
         }
     }
 }
